Fix logo height on IE

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -73,10 +73,10 @@ body {
 .header {
     // the header is fixed and the logo in it tries to fill it out
     // therefore an svg logo should be used!
-    height: 7rem;
+    height: 7em;
 
     img {
-        height: 100%;
+        height: 7em;
     }
 }
 
